[package]
name = "haematite_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haematite_s2s = { path = "../haematite_s2s" }
haematite_models = { path = "../haematite_models" }

clap = { version = "3.2.10", features = ["derive"] }
colored = "2.0.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde_yaml = "0.8.25"
tokio = { version = "1.20.0", features = ["full"] }
tokio-rustls = "0.23.4"
