[package]
name = "haematite_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
