[package]
name = "haematite_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
