[package]
name = "haematite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haematite_models = { path = "../haematite_models" }

bytes = "1.1.0"
chrono = "0.4.19"
colored = "2.0.0"
regex = "1.5.6"
encoding_rs = "0.8.31"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.2.10", features = ["derive"] }
