[package]
name = "haematite_s2s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haematite_events = { path = "../haematite_events" }
haematite_models = { path = "../haematite_models" }

chrono = "0.4.19"
regex = "1.5.6"
encoding_rs = "0.8.31"
serde = "1.0.147"
